--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 
   <body>
     <h1>Odin Recipes</h1>
+    <ul>
+      <li><a href="recipes/italian-wedding-soup.html">Italian Wedding Soup</a></li>
+    </ul>
   </body>
 </html>
