--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-      <li><a href="recipes/italian-wedding-soup.html">Italian Wedding Soup</a></li>
+      <li><a href="./recipes/italian-wedding-soup.html">Italian Wedding Soup</a></li>
     </ul>
   </body>
 </html>
