Include image of Italian wedding soup

--- a/recipes/italian-wedding-soup.html
+++ b/recipes/italian-wedding-soup.html
@@ -8,5 +8,6 @@
 
   <body>
     <h1>Italian Wedding Soup</h1>
+    <img src="../images/italian-wedding-soup.jpg" alt="bowl of Italian wedding soup">
   </body>
 </html>
