--- a/recipes/italian-wedding-soup.html
+++ b/recipes/italian-wedding-soup.html
@@ -13,5 +13,19 @@
     <h2>Description</h2>
     <p>This soup contains hearty meatballs and filling couscous. It has an ultra-flavorful broth.</p>
 
+    <h2>Ingredients</h2>
+    <ul>
+      <li>2 yellow onions</li>
+      <li>2 (½ lb) pkgs ready to heat beef meatballs</li>
+      <li>¼ oz Italian seasoning</li>
+      <li>2 pkts beef broth concentrate</li>
+      <li>2 (3 oz) Israeli couscous</li>
+      <li>1 bunch curly kale</li>
+      <li>olive oil</li>
+      <li>garlic</li>
+      <li>kosher salt</li>
+      <li>ground pepper</li>
+      <li>white wine vinegar (or apple cider vinegar)</li>
+    </ul>
   </body>
 </html>
