List out Italian wedding soup steps

--- a/recipes/italian-wedding-soup.html
+++ b/recipes/italian-wedding-soup.html
@@ -27,5 +27,47 @@
       <li>ground pepper</li>
       <li>white wine vinegar (or apple cider vinegar)</li>
     </ul>
+
+    <h2>Steps</h2>
+    <ol>
+      <li>
+        Cook meatballs & onions
+        <ul>
+          <li>Finely chop onions</li>
+          <li>Head 2 tbsp oil in a large pot over medium-high</li>
+          <li>Add meatballs and cook, stirring occasionally, until browned all over, 2-3 min</li>
+          <li>Add onions; cook, stirring, until softened, 3-5 min</li>
+          <li>Meanwhile, finely chop 1 tablespoon garlic</li>
+        </ul>
+      </li>
+      <li>
+        Add aromatics & broth
+        <ul>
+          <li>To pot with meatballs, add chopped garlic and 2 tbsp of the Italian seasoning; cook, stirring, until fragrant, about 1 min</li>
+          <li>Stir in 8 cups water, all of the broth concentrate, 2 tsp salt, and 1 tsp vinegar; bring to a boil over high heat</li>
+        </ul>
+      </li>
+      <li>
+        Add couscous
+        <ul>
+          <li>Stir couscous into soup, then reduce heat to medium-low</li>
+          <li>Simmer until couscous is tender, 10-15 min</li>
+        </ul>
+      </li>
+      <li>
+        Prep kale
+        <ul>
+          <li>While soup simmers, strip kale leaves from tough stems; discard stems</li>
+          <li>Tear or chop leaves into bite-sized pieces</li>
+        </ul>
+      </li>
+      <li>
+        Add kale & serve
+        <ul>
+          <li>Stir kale into soup and simmer until wilted and softened, about 5 min more</li>
+          <li>Season Italian wedding soup to taste with salt and pepper and serve</li>
+        </ul>
+      </li>
+    </ol>
   </body>
 </html>
