--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li><a href="./recipes/italian-wedding-soup.html">Italian Wedding Soup</a></li>
+      <li><a href="./recipes/chicken-fried-chicken.html">Chicken-Fried Chicken</a></li>
     </ul>
   </body>
 </html>
