--- a/recipes/chicken-fried-chicken.html
+++ b/recipes/chicken-fried-chicken.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chicken Fried Chicken | Odin Recipes</title>
+    <title>Chicken-Fried Chicken | Odin Recipes</title>
   </head>
 
   <body>
-    <h1>Chicken Fried Chicken</h1>
-    <img src="../images/chicken-fried-chicken.jpg" alt="plate of chicken fried chicken with mashed potatoes and green beans">
+    <h1>Chicken-Fried Chicken</h1>
+    <img src="../images/chicken-fried-chicken.jpg" alt="plate of chicken-fried chicken with mashed potatoes and green beans">
 
     <h2>Description</h2>
     <p></p>
