Add chicken-fried chicken description

--- a/recipes/chicken-fried-chicken.html
+++ b/recipes/chicken-fried-chicken.html
@@ -11,7 +11,7 @@
     <img src="../images/chicken-fried-chicken.jpg" alt="plate of chicken-fried chicken with mashed potatoes and green beans">
 
     <h2>Description</h2>
-    <p></p>
+    <p>Chicken-fried chicken is a play on <em>chicken-fried chicken</em>. It has a golden, crispy exterior which is smothered in creamy gravy. This dish is paired with mashed potatoes and green beans.</p>
 
     <h2>Ingredients</h2>
     <ul>
