--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <body>
     <h1>Odin Recipes</h1>
+    <p>These are <strong>not</strong> my recipes. But, I do think they taste good!</p>
     <ul>
       <li><a href="./recipes/italian-wedding-soup.html">Italian Wedding Soup</a></li>
       <li><a href="./recipes/chicken-fried-chicken.html">Chicken-Fried Chicken</a></li>
