List out chicken-fried chicken ingredients

--- a/recipes/chicken-fried-chicken.html
+++ b/recipes/chicken-fried-chicken.html
@@ -15,7 +15,18 @@
 
     <h2>Ingredients</h2>
     <ul>
-      <li></li>
+      <li>2 russett potatoes</li>
+      <li>2 (10 oz) pkgs boneless, skinless chicken breast</li>
+      <li>1 (¼ oz) steak seasoning</li>
+      <li>1 lb green beans</li>
+      <li>1 pkt turkey broth concentrate</li>
+      <li>Kosher salt</li>
+      <li>Ground pepper</li>
+      <li>4 tbsp butter</li>
+      <li>1 cup milk</li>
+      <li>2 large eggs</li>
+      <li>1 cup all-purpose flour</li>
+      <li>neutral oil</li>
     </ul>
 
     <h2>Steps</h2>
