List out chicken-fried chicken steps

--- a/recipes/chicken-fried-chicken.html
+++ b/recipes/chicken-fried-chicken.html
@@ -32,33 +32,52 @@
     <h2>Steps</h2>
     <ol>
       <li>
-        Step 1
+        Cook mashed potatoes
         <ul>
-          <li></li>
+          <li>Preheat oven to 450℉ with a rack in the upper third</li>
+          <li>Peel potatoes; cut into 1 in pieces</li>
+          <li>Place in a medium saucepan with enough salted water to cover by 1 in</li>
+          <li>Cover and bring to a boil</li>
+          <li>Simmer over medium-high heat, uncovered, until tender, 10-12 min</li>
+          <li>Drain, return to saucepan, and mash with 4 tbsp butter and ½ cup milk; season to taste</li>
         </ul>
       </li>
       <li>
-        Step 2
+        Bread chicken
         <ul>
-          <li></li>
+          <li>Meanwhile, pat chicken dry, then pound to a ½ in thickness, if desired</li>
+          <li>Season with salt and pepper</li>
+          <li>In a shallow bowl, beat 2 large eggs, salt, and pepper</li>
+          <li>In a separate shallow bowl, whisk 1 cup flour and 1 tbsp steak seasoning</li>
+          <li>Coat chicken in seasoned flour, then dip in egg, letting excess drip back into bowl</li>
+          <li>Coat well in seasoned flour again</li>
         </ul>
       </li>
       <li>
-        Step 3
+        Roads green beans
         <ul>
-          <li></li>
+          <li>Trim ends from green beans</li>
+          <li>On a rimmed baking sheet, toss with 1 tbsp oil and a pinch of each of salt and pepper</li>
+          <li>Roast on upper oven rack until well browned and tender, 12-15 minutes</li>
         </ul>
       </li>
       <li>
-        Step 4
+        Fry chicken
         <ul>
-          <li></li>
+          <li>Heat ¼ in oil in a large skillet (preferably cast-iron) over medium-high until shimmering (see our pro tip in step 6!)</li>
+          <li>Add chicken and fry until golden and crisp, 3-4 minutes per side (reduce head if browning too quickly)</li>
+          <li>Transfer to a paper towel-lined plate and sprinkle with salt</li>
+          <li>Pour off all but 1 tbsp oil from skillet</li>
         </ul>
       </li>
       <li>
-        Step 5
+        Make gravy & serve
         <ul>
-          <li></li>
+          <li>Add 1½ tbsp flour to same skillet and cook over medium-high heat, whisking, until just golden, about 1 min</li>
+          <li>Gradually stir in turkey broth concentrate and ½ cup each of milk and water</li>
+          <li>Bring to a simmer, cook until thickened, 1-2 minutes</li>
+          <li>Serve chicken with potatoes and green beans alongside</li>
+          <li>Spoon gravy over top</li>
         </ul>
       </li>
     </ol>
