--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
       <li><a href="./recipes/italian-wedding-soup.html">Italian Wedding Soup</a></li>
       <li><a href="./recipes/chicken-fried-chicken.html">Chicken-Fried Chicken</a></li>
+      <li><a href="./recipes/smokey-chipotle-turkey-sweet-potato-chili.html">Smokey Chipotle Turkey &amp; Sweet Potato Chili</a></li>
     </ul>
   </body>
 </html>
