Add sweet potato chili description

--- a/recipes/smokey-chipotle-turkey-sweet-potato-chili.html
+++ b/recipes/smokey-chipotle-turkey-sweet-potato-chili.html
@@ -11,7 +11,7 @@
     <img src="../images/smokey-chipotle-turkey-sweet-potato-chili.jpg" alt="bowl of smokey chipotle turkey and sweet potato chili">
 
     <h2>Description</h2>
-    <p></p>
+    <p>This hearty bowl of chili has a smokey, spicy flavor that makes you feel good.</p>
 
     <h2>Ingredients</h2>
     <ul>
