--- a/recipes/chicken-fried-chicken.html
+++ b/recipes/chicken-fried-chicken.html
@@ -20,8 +20,8 @@
       <li>1 (¼ oz) steak seasoning</li>
       <li>1 lb green beans</li>
       <li>1 pkt turkey broth concentrate</li>
-      <li>Kosher salt</li>
-      <li>Ground pepper</li>
+      <li>kosher salt</li>
+      <li>ground pepper</li>
       <li>4 tbsp butter</li>
       <li>1 cup milk</li>
       <li>2 large eggs</li>
