List out sweet potato chili ingredients

--- a/recipes/smokey-chipotle-turkey-sweet-potato-chili.html
+++ b/recipes/smokey-chipotle-turkey-sweet-potato-chili.html
@@ -15,7 +15,18 @@
 
     <h2>Ingredients</h2>
     <ul>
-      <li></li>
+      <li>2 scallions</li>
+      <li>2 sweet potatoes</li>
+      <li>1 oz chipotle chilies in adobo sauce</li>
+      <li>2 (10 oz) pkgs ground turkey</li>
+      <li>2 (¼ oz) taco seasoning</li>
+      <li>2 (15 oz) cans kidney beans</li>
+      <li>4 (1 oz) sour cream</li>
+      <li>garlic</li>
+      <li>neutral oil</li>
+      <li>kosher salt</li>
+      <li>ground pepper</li>
+      <li>apple cider vinegar (or red wine vinegar)</li>
     </ul>
 
     <h2>Steps</h2>
