Replace & with &amp;
Need to use HTML character reference

--- a/recipes/chicken-fried-chicken.html
+++ b/recipes/chicken-fried-chicken.html
@@ -71,7 +71,7 @@
         </ul>
       </li>
       <li>
-        Make gravy & serve
+        Make gravy &amp; serve
         <ul>
           <li>Add 1½ tbsp flour to same skillet and cook over medium-high heat, whisking, until just golden, about 1 min</li>
           <li>Gradually stir in turkey broth concentrate and ½ cup each of milk and water</li>
