--- a/recipes/italian-wedding-soup.html
+++ b/recipes/italian-wedding-soup.html
@@ -62,7 +62,7 @@
         </ul>
       </li>
       <li>
-        Add kale & serve
+        Add kale &amp; serve
         <ul>
           <li>Stir kale into soup and simmer until wilted and softened, about 5 min more</li>
           <li>Season Italian wedding soup to taste with salt and pepper and serve</li>
