--- a/recipes/smokey-chipotle-turkey-sweet-potato-chili.html
+++ b/recipes/smokey-chipotle-turkey-sweet-potato-chili.html
@@ -32,32 +32,43 @@
     <h2>Steps</h2>
     <ol>
       <li>
-        Step 1
+        Prep ingredients
         <ul>
-          <li></li>
+          <li>Trim ends from scallions, then thinly slice, keeping dark greens separate</li>
+          <li>Finely chop 1 tbsp garlic</li>
+          <li>Scrub sweet potatoes, then cut into ¼ in pieces</li>
       </li>
       <li>
-        Step 2
+        Brown turkey
         <ul>
-          <li></li>
+          <li>Heat 3 tbsp oil in a large pot over high until shimmering</li>
+          <li>Add ground turkey in large clumps and season with salt and pepper</li>
+          <li>Cook, without stirring, until well browned on the bottom, 3-5 minutes</li>
+          <li>Break up into smaller pieces</li>
         </ul>
       </li>
       <li>
-        Step 3
+        Cook aromatics
         <ul>
-          <li></li>
+          <li>To pot with turkey, add scallion whites and light greens, chopped garlic, all of the taco seasoning, and chipotle chilies (use half for a milder chili, or omit if no spice is desired)</li>
+          <li>Cook, stirring frequently, until fragrant and scallions and garlic are softened, about 1 minute (reduce heat if garlic is browning too quickly)</li>
         </ul>
       </li>
       <li>
-        Step 4
+        Simmer chili
         <ul>
-          <li></li>
+          <li>To same pot with turkey, add sweet potatoes, all of the beans and their liquid, 2½ cups water, and 1 tbsp salt</li>
+          <li>Bring to a simmer over high; partially cover with a lid or foil</li>
+          <li>Reduce heat to medium; cook, stirring occasionally, until turkey is cooked through and sweet potatoes are softened, 20-25 min</li>
         </ul>
       </li>
       <li>
-        Step 5
+        Finish &amp; serve
         <ul>
-          <li></li>
+          <li>Using a slotted spoon, transfer ¼ cup of the chili to a small bowl; roughly mash with a fork</li>
+          <li>Stir back into pot with remaining chili to thicken slightly</li>
+          <li>Add 2 tbsp vinegar and season to taste with salt and pepper</li>
+          <li>Serve turkey and sweet potato chili topped with scallion dark greens and a dollop of sour cream</li>
         </ul>
       </li>
     </ol>
