Add link to stylesheet

--- a/recipes/smokey-chipotle-turkey-sweet-potato-chili.html
+++ b/recipes/smokey-chipotle-turkey-sweet-potato-chili.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smokey Chipotle Turkey &amp; Sweet Potato Chili | Odin Recipes</title>
+    <link rel="stylesheet" href="../style.css">
   </head>
 
   <body>
