Remove mention of step 6
The recipes used had an "extra credit" step 6. To simplify things, I did
not want to include those steps. But, while copying the procedures I
still left a reference to it. That reference is now removed.

--- a/recipes/chicken-fried-chicken.html
+++ b/recipes/chicken-fried-chicken.html
@@ -65,7 +65,7 @@
       <li>
         Fry chicken
         <ul>
-          <li>Heat ¼ in oil in a large skillet (preferably cast-iron) over medium-high until shimmering (see our pro tip in step 6!)</li>
+          <li>Heat ¼ in oil in a large skillet (preferably cast-iron) over medium-high until shimmering</li>
           <li>Add chicken and fry until golden and crisp, 3-4 minutes per side (reduce head if browning too quickly)</li>
           <li>Transfer to a paper towel-lined plate and sprinkle with salt</li>
           <li>Pour off all but 1 tbsp oil from skillet</li>
